# binance_currency

./: .dockerignore  .env-example  .env-example-local  .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
app/: database.py  logger.py  main.py  models.py  worker.py
infra/: docker-compose.yaml
migrations/: env.py
migrations/versions/: 15e141e8cd8e_create_currency_rates_table.py
