[tool.poetry]
name = "binance-currency"
version = "0.1.0"
description = ""
authors = ["Pavel Lashkov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
psycopg2-binary = "^2.9.10"
pre-commit = "^4.0.1"
sqlalchemy = "^2.0.36"
redis = "^5.1.1"
uvicorn = "^0.32.0"
alembic = "^1.13.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
